--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.3.0",
+    "next": "^15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "3.23.2",
-    "yaml": "2.3.1"
+    "yaml": "^2.0.0",
+    "zod": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.28",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.23",
-    "tailwindcss": "3.5.2",
-    "typescript": "5.6.4"
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "24.8.1",
+    "@types/react": "19.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
+    "typescript": "5.9.3"
   }
 }
